--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
     </div>
     <div class="history-body">
         <h2 class="heading history-head">History</h2>
-        <div id="history-list" class="history-list">
-        </div>
+        <div id="history-list" class="history-list"></div>
     </div>
     <script src="index.js"></script>
 </body>
