renaming js file

--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
         <h2 class="heading history-head">History</h2>
         <div id="history-list" class="history-list"></div>
     </div>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
