multiple operator fixed, history fixed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="calculator-body">
         <h2 class="heading">Calculator</h2>
         <div class="display">
+            <p id="display-history"></p>
             <p id="display-text"></p>
         </div>
         <div class="keys">
