sqaure button fixed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <input class="key-num" type="button" value="5" onclick="appendVal('5')">
                 <input class="key-num" type="button" value="6" onclick="appendVal('6')">
                 <input class="key-op" type="button" value="-" onclick="appendVal('-')">
-                <input class="key-op" type="button" value="x^y" onclick="appendVal('**')">
+                <input class="key-op" type="button" value="x^y" onclick="appendVal('^')">
                 <input class="key-num" type="button" value="1" onclick="appendVal('1')">
                 <input class="key-num" type="button" value="2" onclick="appendVal('2')">
                 <input class="key-num" type="button" value="3" onclick="appendVal('3')">
